[gd_scene load_steps=6 format=3 uid="uid://vj4epnurm4uw"]

[ext_resource type="Script" uid="uid://e63w0twxb0g7" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://dvugjro8g4b7i" path="res://scripts/camera.gd" id="2_g2els"]
[ext_resource type="PackedScene" uid="uid://cebsp8f8vb732" path="res://ui/player_ui.tscn" id="2_qhqgy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sh265"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4flbx"]
radial_segments = 32

[node name="player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9760854, 0)
script = ExtResource("1_3vyb7")

[node name="PlayerUi" parent="." instance=ExtResource("2_qhqgy")]
process_mode = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_sh265")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_4flbx")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6204446, 0)
script = ExtResource("2_g2els")

[node name="Camera3D" type="Camera3D" parent="head"]

[node name="RayCast3D" type="RayCast3D" parent="head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
target_position = Vector3(0, -4, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Label" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -11.5
offset_right = 49.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press E to sit"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="PlayerUi/computer/folder" to="." method="open_folder"]
[connection signal="pressed" from="PlayerUi/computer/off" to="." method="exit_computer_mode"]
[connection signal="pressed" from="PlayerUi/computer/folder2/helpButton" to="." method="open_help"]
[connection signal="pressed" from="PlayerUi/computer/folder2/closeFolder" to="." method="open_folder"]
[connection signal="pressed" from="PlayerUi/computer/folder2/1Button" to="." method="open_ide" binds= [1]]
[connection signal="pressed" from="PlayerUi/computer/folder2/2Button" to="." method="open_ide" binds= [2]]
[connection signal="pressed" from="PlayerUi/computer/folder2/3Button" to="." method="open_ide" binds= [3]]
[connection signal="pressed" from="PlayerUi/computer/folder2/4Button" to="." method="open_ide" binds= [4]]
[connection signal="pressed" from="PlayerUi/computer/folder2/5Button" to="." method="open_ide" binds= [5]]
[connection signal="pressed" from="PlayerUi/computer/help/closeFolder2" to="." method="open_help"]
[connection signal="pressed" from="PlayerUi/menu_pause/ColorRect/resume" to="." method="resume_game"]
[connection signal="pressed" from="PlayerUi/menu_pause/ColorRect/resume" to="PlayerUi" method="resume_game"]
[connection signal="pressed" from="PlayerUi/menu_pause/ColorRect/menu" to="." method="menu"]

[editable path="PlayerUi"]
[editable path="PlayerUi/computer"]
[editable path="PlayerUi/computer/Ide"]
[editable path="PlayerUi/menu_pause"]
